Fix nav styling on mobile

--- a/style.css
+++ b/style.css
@@ -205,5 +205,9 @@ footer {
     
     nav {
         position: relative;
+        flex-direction: column;
+    }
+    .line-seperator {
+        display: none;
     }
 }
